finalizando implementacao do dlq e descarte de mensagens problematicas

--- a/configs/config.yml
+++ b/configs/config.yml
@@ -9,7 +9,9 @@ rabbitmq:
       exchange: monitriip 
       exchangetype: topic 
       routingkey: monitriip.transmissoes
-      dlqname: lazypersistence.dlq
+      dlqexchange: lazypersistence.DLQ
+      dlqexchangetype: direct 
+      dlqroutingkey: erros
       durable: true 
     - queue: 
       name: transmissoes
